...
                        controller: _conEmail,
                        keyboardType: TextInputType.emailAddress,
                        prefixIcon: Icon(
                          Icons.alternate_email,
                          color: Theme.of(context).textTheme.bodyLarge?.color,
                        ),
                        hintText: "eve.holt@reqres.in",
                        hint: tr('email'),
                        validator: (String? value) => value != null
                            ? (!value.isValidEmail()
                                ? tr('errorInvalidEmail')
                                : null)
                            : null,
...
                              color:
                                  Theme.of(context).textTheme.bodyLarge?.color,
                            ),
                            obscureText:
                                context.read<AuthCubit>().isPasswordHide ??
                                    false,
                            hintText: '••••••••••••',
                            maxLine: 1,
                            hint: tr('password'),
                            suffixIcon: IconButton(
                              padding: EdgeInsets.zero,
                              constraints: const BoxConstraints(),
                              onPressed: () =>
...
