appId: com.example.templates.stg
---
- launchApp
- tapOn: "eve.holt@reqres.in"
- inputText: "eve.holt@reqres.in"
- tapOn: "••••••••••••"
- inputText: "password123"
- tapOn: "LOGIN"
